First Iteration of the website

--- a/contact.html
+++ b/contact.html
@@ -1,162 +1,169 @@
 ﻿<!doctype html>
-<html lang="en">
+<html lang="en-GB">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Contact | Elysium by Georgie Rose</title>
-  <meta name="description" content="Enquire about permanent jewellery, wedding packages, or pop-ups with Elysium by Georgie Rose. We reply with availability and next steps.">
-  <meta property="og:title" content="Contact | Elysium by Georgie Rose">
-  <meta property="og:description" content="Get in touch to book permanent jewellery, weddings, or pop-ups.">
-  <meta property="og:image" content="assets/images/final-logo.jpg">
+  <title>Contact and Booking | Elysium By Georgie Rose</title>
+  <meta name="description" content="Book nails or permanent jewellery, ask about events, and send enquiries to Elysium By Georgie Rose.">
+  <meta property="og:title" content="Contact and Booking | Elysium By Georgie Rose">
+  <meta property="og:description" content="Two-minute enquiry form for nails, permanent jewellery, events and wedding keepsakes.">
   <meta property="og:type" content="website">
+  <meta property="og:image" content="assets/images/Jewellery/Wedding%20fair%20pop%20up%20with%20georgie%20in%20shot.jpg">
+  <link rel="icon" href="assets/images/final-logo.jpg">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,400;9..144,600;9..144,700&family=Manrope:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/style.css">
-  <!-- Update image paths below if your filenames differ. -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "LocalBusiness",
-    "name": "Elysium by Georgie Rose",
-    "alternateName": "Elysium Permanent Jewellery",
-    "image": "assets/images/final-logo.jpg",
-    "description": "Permanent welded jewellery and pop-up experiences in Staffordshire.",
-    "address": {
-      "@type": "PostalAddress",
-      "streetAddress": "65 George Street",
-      "addressLocality": "Newcastle-under-Lyme",
-      "addressRegion": "Staffordshire",
-      "addressCountry": "GB"
-    },
-    "location": [
-      {
-        "@type": "Place",
-        "name": "Panache",
-        "address": {
-          "@type": "PostalAddress",
-          "streetAddress": "15 Young St",
-          "addressLocality": "Cheadle",
-          "addressRegion": "Stoke-on-Trent",
-          "postalCode": "ST10 1HL",
-          "addressCountry": "GB"
-        }
-      }
-    ],
-    "sameAs": [
-      "https://www.instagram.com/elysium_by_georgierose/",
-      "https://www.facebook.com/profile.php?id=61571925904476"
-    ]
-  }
-  </script>
 </head>
 <body>
-  <a class="skip-link" href="#main">Skip to content</a>
+  <a class="skip-link" href="#main-content">Skip to content</a>
 
   <header class="site-header">
     <div class="container header-inner">
-      <a class="logo" href="index.html">
-        <img src="assets/images/final-logo.jpg" alt="Elysium by Georgie Rose logo">
-        <div>
-          <div>Elysium by Georgie Rose</div>
-          <small class="text-muted">Permanent jewellery</small>
-        </div>
+      <a class="brand" href="index.html">
+        <img class="brand-mark" src="assets/images/final-logo.jpg" alt="Elysium By Georgie Rose logo" width="50" height="50">
+        <span class="brand-text">
+          <span class="brand-name" data-brand-name>Elysium By Georgie Rose</span>
+          <span class="brand-tagline">Nails and Permanent Jewellery</span>
+        </span>
       </a>
-      <div class="nav-actions">
-        <nav class="site-nav" aria-label="Main">
-          <button id="navToggle" class="nav-toggle" aria-expanded="false" aria-controls="navMenu">Menu</button>
-          <div id="navMenu" class="nav-links">
-            <a href="index.html">Home</a>
-            <a href="services.html">Services</a>
-            <a href="weddings.html">Weddings</a>
-            <a href="popups.html">Pop-ups</a>
-            <a href="gallery.html">Gallery</a>
-            <a href="faq.html">FAQs</a>
-            <a href="contact.html">Contact</a>
-          </div>
-        </nav>
-        <a class="btn btn-primary" href="contact.html">Book / Enquire</a>
+
+      <nav class="nav-shell" aria-label="Primary">
+        <button class="nav-toggle" type="button" data-nav-toggle aria-expanded="false" aria-controls="site-menu">Menu</button>
+        <div class="nav-backdrop" data-nav-backdrop></div>
+        <div id="site-menu" class="site-nav-links" data-nav-menu>
+          <a href="index.html">Home</a>
+          <a href="nails.html">Nails</a>
+          <a href="jewellery.html">Permanent Jewellery</a>
+          <a href="gallery.html">Gallery</a>
+          <a href="contact.html" aria-current="page">Contact / Book</a>
+        </div>
+      </nav>
+
+      <div class="header-meta">
+        <div class="social-inline" aria-label="Social links">
+          <a class="social-link" data-social-link="instagram" href="#" aria-label="Instagram">
+            <svg viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M7.8 2h8.4A5.8 5.8 0 0 1 22 7.8v8.4a5.8 5.8 0 0 1-5.8 5.8H7.8A5.8 5.8 0 0 1 2 16.2V7.8A5.8 5.8 0 0 1 7.8 2Zm-.2 2A3.6 3.6 0 0 0 4 7.6v8.8A3.6 3.6 0 0 0 7.6 20h8.8a3.6 3.6 0 0 0 3.6-3.6V7.6A3.6 3.6 0 0 0 16.4 4H7.6Zm9.65 1.5a1.15 1.15 0 1 1 0 2.3 1.15 1.15 0 0 1 0-2.3ZM12 7a5 5 0 1 1 0 10 5 5 0 0 1 0-10Zm0 2a3 3 0 1 0 0 6 3 3 0 0 0 0-6Z"/></svg>
+          </a>
+          <a class="social-link" data-social-link="facebook" href="#" aria-label="Facebook">
+            <svg viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M13.5 22v-8h2.7l.4-3h-3.1V9.1c0-.9.3-1.6 1.6-1.6h1.7V4.8c-.8-.1-1.6-.2-2.4-.2-2.4 0-4.1 1.5-4.1 4.3V11H8v3h2.3v8h3.2Z"/></svg>
+          </a>
+        </div>
+        <a class="btn btn-primary" data-book-link href="contact.html">Book / Enquire</a>
       </div>
     </div>
   </header>
 
-  <main id="main">
+  <main id="main-content">
     <section class="hero">
-      <div class="container">
-        <p class="pill">Contact</p>
-        <h1>Tell us about the piece or event you are planning.</h1>
-        <p class="lead">We will reply with availability, pricing guidance, and next steps.</p>
+      <div class="container hero-copy">
+        <span class="eyebrow">Contact and booking</span>
+        <h1 class="hero-title">Book an appointment or send an enquiry</h1>
+        <p class="lead">Share your preferred service, dates and any ideas. You will receive a reply with next steps.</p>
       </div>
     </section>
 
     <section class="section surface">
-      <div class="container grid grid-2">
-        <div class="grid">
-          <div class="card">
-            <h2>Contact details</h2>
-            <p class="text-muted">Permanent jewellery appointments are custom-fitted and welded. Booking link is configurable.</p>
-            <p><strong>Primary location:</strong> 65 George Street, Newcastle-under-Lyme</p>
-            <p><strong>Optional nails:</strong> Panache, 15 Young St, Cheadle, Stoke-on-Trent ST10 1HL</p>
-            <p><strong>Email:</strong> <a href="mailto:hello@elysiumbygeorgierose.co.uk">hello@elysiumbygeorgierose.co.uk</a></p>
-            <p><strong>Social:</strong></p>
-            <div class="badge-row">
-              <a class="pill" href="https://www.instagram.com/elysium_by_georgierose/" target="_blank" rel="noreferrer">Instagram</a>
-              <a class="pill" href="https://www.facebook.com/profile.php?id=61571925904476" target="_blank" rel="noreferrer">Facebook</a>
+      <div class="container contact-layout">
+        <article class="contact-panel">
+          <h2 class="section-title">Contact methods</h2>
+          <div class="contact-list">
+            <div class="contact-item" data-contact-email-wrap>
+              <strong>Email</strong>
+              <a data-contact-email-link href="mailto:hello@elysiumbygeorgierose.co.uk">hello@elysiumbygeorgierose.co.uk</a>
+            </div>
+            <div class="contact-item" data-contact-phone-wrap>
+              <strong>Phone</strong>
+              <a data-contact-phone-link href="#"></a>
+            </div>
+            <div class="contact-item">
+              <strong>Instagram</strong>
+              <a data-social-link="instagram" href="#">Message directly</a>
+            </div>
+            <div class="contact-item">
+              <strong>Facebook</strong>
+              <a data-social-link="facebook" href="#">Follow updates</a>
+            </div>
+            <div class="contact-item">
+              <strong>Service area</strong>
+              <span data-location-text>Serving Staffordshire and surrounding areas.</span>
             </div>
           </div>
-          <div class="card simple">
-            <h2>What happens next</h2>
-            <ol>
-              <li>We review your request and check availability.</li>
-              <li>We confirm your preferred date and jewellery details.</li>
-              <li>You arrive for fitting, welding, and aftercare guidance.</li>
-            </ol>
-            <p class="text-muted">Typical response time: 24 to 48 hours.</p>
-          </div>
-        </div>
 
-        <div class="card form-card">
-          <h2>Enquiry form</h2>
-          <p class="text-muted">Replace the Formspree endpoint with your own.</p>
-          <form action="https://formspree.io/f/XXXXXXX" method="POST" data-ajax="true">
-            <div>
+          <hr class="section-rule">
+
+          <h3>What happens next</h3>
+          <ol class="info-list">
+            <li>Your enquiry is reviewed with service availability.</li>
+            <li>You receive a follow-up with date options and details.</li>
+            <li>Your appointment is confirmed with preparation guidance.</li>
+          </ol>
+          <p class="muted">For event and wedding requests, include your preferred date window and guest count.</p>
+        </article>
+
+        <article class="contact-panel form-card">
+          <div class="form-head">
+            <h2 class="section-title">Enquiry form</h2>
+            <p class="section-intro">All fields marked required must be completed before sending.</p>
+          </div>
+
+          <form class="form-fields" data-form-type="enquiry" action="https://formspree.io/f/XXXXXXX" method="POST" novalidate>
+            <div class="field">
               <label for="name">Full name</label>
               <input id="name" name="name" type="text" autocomplete="name" required>
             </div>
-            <div>
-              <label for="email">Email</label>
+
+            <div class="field">
+              <label for="email">Email address</label>
               <input id="email" name="email" type="email" autocomplete="email" required>
             </div>
-            <div>
-              <label for="phone">Phone (optional)</label>
-              <input id="phone" name="phone" type="tel" autocomplete="tel">
+
+            <div class="field">
+              <label for="phone">Phone number (optional)</label>
+              <input id="phone" name="phone" type="tel" autocomplete="tel" inputmode="tel">
             </div>
-            <div>
-              <label for="reason">Reason for enquiry</label>
-              <select id="reason" name="reason" required>
+
+            <div class="field">
+              <label for="service">Service interest</label>
+              <select id="service" name="service" required>
+                <option value="">Select a service</option>
+                <option value="BIAB">BIAB</option>
+                <option value="Gel polish">Gel polish</option>
+                <option value="Gel extensions">Gel extensions</option>
                 <option value="Permanent jewellery">Permanent jewellery</option>
-                <option value="Wedding package">Wedding package</option>
-                <option value="Pop-up booking">Pop-up booking</option>
-                <option value="Collaboration">Collaboration</option>
-                <option value="Nails">Nails (optional)</option>
-                <option value="Other">Other</option>
+                <option value="Pop-up/event">Pop-up or event</option>
+                <option value="Wedding keepsakes">Wedding keepsakes</option>
               </select>
             </div>
-            <div>
-              <label for="datetime">Preferred date/time (optional)</label>
-              <input id="datetime" name="preferred_datetime" type="text" placeholder="e.g., Saturday afternoon">
+
+            <div class="field">
+              <label for="date">Preferred date or timeframe</label>
+              <input id="date" name="preferred_date" type="text" placeholder="Example: Late March, weekday evening" required>
             </div>
-            <div>
-              <label for="message">Message</label>
-              <textarea id="message" name="message" required></textarea>
+
+            <div class="field">
+              <label for="message">Your message</label>
+              <textarea id="message" name="message" placeholder="Tell us what you would like to book." required></textarea>
+              <p class="field-help">Please do not include sensitive personal or payment information.</p>
             </div>
+
+            <p class="form-error" data-form-error aria-live="polite"></p>
+
             <button class="btn btn-primary" type="submit">Send enquiry</button>
           </form>
-          <div class="form-success" role="status" aria-live="polite">
-            <div>
-              <h3>Thank you for your enquiry</h3>
-              <p class="text-muted">We have received your message and will reply with next steps.</p>
-              <a class="btn btn-secondary" href="index.html">Back to home</a>
+
+          <div class="form-footer">
+            <p class="form-note">If the form is unavailable, message on Instagram and include your service request.</p>
+          </div>
+
+          <div class="form-success-layer" role="status" aria-live="polite">
+            <div class="stack">
+              <h3>Thanks, your enquiry has been sent.</h3>
+              <p class="muted">A reply with next steps will follow shortly.</p>
+              <a class="btn btn-ghost" href="index.html">Back to homepage</a>
             </div>
           </div>
-        </div>
+        </article>
       </div>
     </section>
   </main>
@@ -164,35 +171,39 @@
   <footer class="footer">
     <div class="container footer-grid">
       <div>
-        <h3>Elysium by Georgie Rose</h3>
-        <p class="text-muted">Permanent jewellery experiences in Staffordshire and beyond. Custom-fitted, welded, and designed to last.</p>
-        <small>(c) <span data-year></span> Elysium by Georgie Rose.</small>
+        <h2 class="footer-title" data-brand-name>Elysium By Georgie Rose</h2>
+        <p>Premium nails and permanent jewellery services with an editorial, detail-led finish.</p>
+        <address data-location-text>Serving Staffordshire and surrounding areas.</address>
+        <small>&copy; <span data-year></span> <span data-brand-name>Elysium By Georgie Rose</span>. All rights reserved.</small>
       </div>
       <div class="footer-links">
         <strong>Quick links</strong>
-        <a href="services.html">Services</a>
-        <a href="weddings.html">Weddings</a>
-        <a href="popups.html">Pop-ups</a>
+        <a href="index.html">Home</a>
+        <a href="nails.html">Nails</a>
+        <a href="jewellery.html">Permanent Jewellery</a>
         <a href="gallery.html">Gallery</a>
-        <a href="contact.html">Contact</a>
+        <a href="contact.html">Contact / Book</a>
       </div>
       <div class="footer-links">
-        <strong>Policies</strong>
-        <a href="policies/privacy.html">Privacy</a>
-        <a href="policies/cookies.html">Cookies</a>
-        <a href="policies/accessibility.html">Accessibility</a>
+        <strong>Service links</strong>
+        <a href="nails.html#biab">BIAB</a>
+        <a href="nails.html#gel-polish">Gel Polish</a>
+        <a href="nails.html#gel-extensions">Gel Extensions</a>
+        <a href="jewellery.html#bracelets">Bracelets</a>
+        <a href="jewellery.html#events">Pop-ups and events</a>
+      </div>
+      <div class="footer-links">
         <strong>Social</strong>
-        <a href="https://www.instagram.com/elysium_by_georgierose/" target="_blank" rel="noreferrer">Instagram</a>
-        <a href="https://www.facebook.com/profile.php?id=61571925904476" target="_blank" rel="noreferrer">Facebook</a>
+        <a data-social-link="instagram" href="#">Instagram</a>
+        <a data-social-link="facebook" href="#">Facebook</a>
+        <a class="hidden" data-social-link="tiktok" href="#">TikTok</a>
+        <span data-contact-email-wrap>Email: <a data-contact-email-link href="mailto:hello@elysiumbygeorgierose.co.uk">hello@elysiumbygeorgierose.co.uk</a></span>
+        <span data-contact-phone-wrap>Phone: <a data-contact-phone-link href="#"></a></span>
       </div>
     </div>
   </footer>
 
-  <div class="cookie-banner" role="dialog" aria-live="polite" aria-label="Cookie notice">
-    <span>We only use cookies for embedded social content. You can continue browsing if you are happy with this.</span>
-    <button type="button">Got it</button>
-  </div>
-
-  <script src="assets/site.js"></script>
+  <script src="assets/site-config.js"></script>
+  <script src="assets/main.js" defer></script>
 </body>
 </html>
