--- a/popups.html
+++ b/popups.html
@@ -1,172 +1,93 @@
 ﻿<!doctype html>
-<html lang="en">
+<html lang="en-GB">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Pop-ups and Events | Elysium by Georgie Rose</title>
-  <meta name="description" content="Elysium pop-ups bring permanent jewellery to salons, boutiques, and private events. See upcoming dates and partner with us.">
-  <meta property="og:title" content="Pop-ups and Events | Elysium by Georgie Rose">
-  <meta property="og:description" content="Pop-up permanent jewellery experiences for boutiques, salons, and events.">
-  <meta property="og:image" content="assets/images/final-logo.jpg">
+  <title>Pop-ups and Events | Elysium By Georgie Rose</title>
+  <meta name="description" content="Pop-up and event bookings for permanent jewellery with Elysium By Georgie Rose.">
+  <meta property="og:title" content="Pop-ups and Events | Elysium By Georgie Rose">
+  <meta property="og:description" content="Bring a premium permanent jewellery experience to your venue or event.">
   <meta property="og:type" content="website">
+  <meta property="og:image" content="assets/images/Jewellery/Urban%20Outfitters%20pop%20up%20set%20up.jpg">
+  <link rel="icon" href="assets/images/final-logo.jpg">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,400;9..144,600;9..144,700&family=Manrope:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/style.css">
-  <!-- Update image paths below if your filenames differ. -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "LocalBusiness",
-    "name": "Elysium by Georgie Rose",
-    "alternateName": "Elysium Permanent Jewellery",
-    "image": "assets/images/final-logo.jpg",
-    "description": "Permanent welded jewellery and pop-up experiences in Staffordshire.",
-    "address": {
-      "@type": "PostalAddress",
-      "streetAddress": "65 George Street",
-      "addressLocality": "Newcastle-under-Lyme",
-      "addressRegion": "Staffordshire",
-      "addressCountry": "GB"
-    },
-    "location": [
-      {
-        "@type": "Place",
-        "name": "Panache",
-        "address": {
-          "@type": "PostalAddress",
-          "streetAddress": "15 Young St",
-          "addressLocality": "Cheadle",
-          "addressRegion": "Stoke-on-Trent",
-          "postalCode": "ST10 1HL",
-          "addressCountry": "GB"
-        }
-      }
-    ],
-    "sameAs": [
-      "https://www.instagram.com/elysium_by_georgierose/",
-      "https://www.facebook.com/profile.php?id=61571925904476"
-    ]
-  }
-  </script>
 </head>
 <body>
-  <a class="skip-link" href="#main">Skip to content</a>
+  <a class="skip-link" href="#main-content">Skip to content</a>
 
   <header class="site-header">
     <div class="container header-inner">
-      <a class="logo" href="index.html">
-        <img src="assets/images/final-logo.jpg" alt="Elysium by Georgie Rose logo">
-        <div>
-          <div>Elysium by Georgie Rose</div>
-          <small class="text-muted">Permanent jewellery</small>
-        </div>
+      <a class="brand" href="index.html">
+        <img class="brand-mark" src="assets/images/final-logo.jpg" alt="Elysium By Georgie Rose logo" width="50" height="50">
+        <span class="brand-text">
+          <span class="brand-name" data-brand-name>Elysium By Georgie Rose</span>
+          <span class="brand-tagline">Nails and Permanent Jewellery</span>
+        </span>
       </a>
-      <div class="nav-actions">
-        <nav class="site-nav" aria-label="Main">
-          <button id="navToggle" class="nav-toggle" aria-expanded="false" aria-controls="navMenu">Menu</button>
-          <div id="navMenu" class="nav-links">
-            <a href="index.html">Home</a>
-            <a href="services.html">Services</a>
-            <a href="weddings.html">Weddings</a>
-            <a href="popups.html">Pop-ups</a>
-            <a href="gallery.html">Gallery</a>
-            <a href="faq.html">FAQs</a>
-            <a href="contact.html">Contact</a>
-          </div>
-        </nav>
-        <a class="btn btn-primary" href="contact.html">Book / Enquire</a>
+      <nav class="nav-shell" aria-label="Primary">
+        <button class="nav-toggle" type="button" data-nav-toggle aria-expanded="false" aria-controls="site-menu">Menu</button>
+        <div class="nav-backdrop" data-nav-backdrop></div>
+        <div id="site-menu" class="site-nav-links" data-nav-menu>
+          <a href="index.html">Home</a>
+          <a href="nails.html">Nails</a>
+          <a href="jewellery.html">Permanent Jewellery</a>
+          <a href="gallery.html">Gallery</a>
+          <a href="contact.html">Contact / Book</a>
+        </div>
+      </nav>
+      <div class="header-meta">
+        <div class="social-inline">
+          <a class="social-link" data-social-link="instagram" href="#" aria-label="Instagram"><svg viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M7.8 2h8.4A5.8 5.8 0 0 1 22 7.8v8.4a5.8 5.8 0 0 1-5.8 5.8H7.8A5.8 5.8 0 0 1 2 16.2V7.8A5.8 5.8 0 0 1 7.8 2Zm-.2 2A3.6 3.6 0 0 0 4 7.6v8.8A3.6 3.6 0 0 0 7.6 20h8.8a3.6 3.6 0 0 0 3.6-3.6V7.6A3.6 3.6 0 0 0 16.4 4H7.6Zm9.65 1.5a1.15 1.15 0 1 1 0 2.3 1.15 1.15 0 0 1 0-2.3ZM12 7a5 5 0 1 1 0 10 5 5 0 0 1 0-10Zm0 2a3 3 0 1 0 0 6 3 3 0 0 0 0-6Z"/></svg></a>
+          <a class="social-link" data-social-link="facebook" href="#" aria-label="Facebook"><svg viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M13.5 22v-8h2.7l.4-3h-3.1V9.1c0-.9.3-1.6 1.6-1.6h1.7V4.8c-.8-.1-1.6-.2-2.4-.2-2.4 0-4.1 1.5-4.1 4.3V11H8v3h2.3v8h3.2Z"/></svg></a>
+        </div>
+        <a class="btn btn-primary" data-book-link href="contact.html">Book / Enquire</a>
       </div>
     </div>
   </header>
 
-  <main id="main">
+  <main id="main-content">
     <section class="hero">
-      <div class="container hero-grid">
-        <div>
-          <p class="pill">Pop-ups and events</p>
-          <h1>Bring the permanent jewellery experience to your space.</h1>
-          <p class="lead">Pop-ups are perfect for boutiques, salons, markets, and private gatherings. We provide the set-up, fitting, and welding.</p>
-          <div class="hero-actions">
-            <a class="btn btn-primary" href="contact.html">Enquire about a pop-up</a>
-            <a class="btn btn-secondary" href="services.html">View services</a>
+      <div class="container hero-shell">
+        <div class="hero-copy">
+          <span class="eyebrow">Pop-ups and events</span>
+          <h1 class="hero-title">Host the Elysium jewellery experience</h1>
+          <p class="lead">Bring welded jewellery fittings to your venue with a polished setup and client-first flow.</p>
+          <div class="btn-group">
+            <a class="btn btn-primary" href="contact.html">Enquire about pop-ups</a>
+            <a class="btn btn-ghost" data-social-link="instagram" href="#">See latest event dates</a>
           </div>
         </div>
-        <div class="hero-image">
-          <img src="assets/images/banner-for-pop-ups.png" alt="Elysium pop-up permanent jewellery station">
+        <div class="hero-visual" aria-hidden="true">
+          <div class="hero-collage">
+            <img src="assets/images/Jewellery/Urban%20Outfitters%20pop%20up%20set%20up.jpg" alt="Urban Outfitters event setup" width="900" height="1100">
+            <img src="assets/images/Jewellery/Pop%20up%20womens%20day.jpg" alt="Women's day event" width="900" height="1100">
+          </div>
         </div>
       </div>
     </section>
 
     <section class="section surface">
       <div class="container grid grid-2">
-        <div class="card">
-          <h2>What to expect</h2>
-          <ul>
-            <li>Curated chain and charm selection</li>
-            <li>Custom fitting and welding on-site</li>
-            <li>Aftercare guidance for every guest</li>
-            <li>Flexible set-up for intimate or busy events</li>
+        <article class="card">
+          <h2 class="section-title">Event format</h2>
+          <ul class="info-list">
+            <li>Curated chain and charm options for guests</li>
+            <li>On-site measuring, fitting and welding</li>
+            <li>Smooth queue and guest flow support</li>
+            <li>Aftercare guidance with every fitting</li>
           </ul>
-        </div>
-        <div class="card">
-          <h2>Booking process</h2>
-          <p class="text-muted">Tell us your event size, venue details, and preferred dates. We will confirm availability and build a tailored pop-up plan.</p>
-          <a class="btn btn-secondary" href="contact.html">Request availability</a>
-        </div>
-      </div>
-    </section>
-
-    <section class="section">
-      <div class="container">
-        <h2 class="section-title">Upcoming dates</h2>
-        <p class="section-subtitle">Placeholder list. Replace with confirmed pop-up dates.</p>
-        <div class="grid grid-3">
-          <div class="card">
-            <h3>Spring pop-up</h3>
-            <p class="text-muted">Date: To be announced</p>
-            <p>Location: Partner salon</p>
+        </article>
+        <article class="card">
+          <h2 class="section-title">Where to find me</h2>
+          <p class="muted">Upcoming dates are announced via social channels. If you want to collaborate, send your venue details and preferred dates.</p>
+          <div class="btn-group">
+            <a class="btn btn-secondary" data-social-link="instagram" href="#">View social updates</a>
+            <a class="btn btn-ghost" href="contact.html">Request event availability</a>
           </div>
-          <div class="card">
-            <h3>Summer market</h3>
-            <p class="text-muted">Date: To be announced</p>
-            <p>Location: Boutique event</p>
-          </div>
-          <div class="card">
-            <h3>Autumn showcase</h3>
-            <p class="text-muted">Date: To be announced</p>
-            <p>Location: Pop-up venue</p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="section surface">
-      <div class="container grid grid-2">
-        <div>
-          <h2 class="section-title">Partner with us</h2>
-          <p class="section-subtitle">Ideal for boutiques, salons, wedding venues, and event planners.</p>
-          <p class="text-muted">We can co-host, cross-promote, and create a premium experience for your audience.</p>
-          <a class="btn btn-primary" href="contact.html">Start a partnership</a>
-        </div>
-        <div class="card simple">
-          <h3>Pop-up gallery</h3>
-          <div class="gallery-grid">
-            <div class="gallery-item"><img src="assets/images/gallery/gallery-1.jpg" alt="Pop-up detail"></div>
-            <div class="gallery-item"><img src="assets/images/gallery/gallery-2.jpg" alt="Pop-up styling"></div>
-            <div class="gallery-item"><img src="assets/images/gallery/gallery-3.jpg" alt="Fitting setup"></div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="section">
-      <div class="container">
-        <div class="card">
-          <h2>Ready to host Elysium?</h2>
-          <p class="text-muted">Share your venue and event details. We will confirm pricing and logistics.</p>
-          <div class="hero-actions">
-            <a class="btn btn-primary" href="contact.html">Enquire now</a>
-            <a class="btn btn-secondary" href="mailto:hello@elysiumbygeorgierose.co.uk">Email us</a>
-          </div>
-        </div>
+        </article>
       </div>
     </section>
   </main>
@@ -174,35 +95,39 @@
   <footer class="footer">
     <div class="container footer-grid">
       <div>
-        <h3>Elysium by Georgie Rose</h3>
-        <p class="text-muted">Permanent jewellery experiences in Staffordshire and beyond. Custom-fitted, welded, and designed to last.</p>
-        <small>(c) <span data-year></span> Elysium by Georgie Rose.</small>
+        <h2 class="footer-title" data-brand-name>Elysium By Georgie Rose</h2>
+        <p>Premium nails and permanent jewellery services with an editorial, detail-led finish.</p>
+        <address data-location-text>Serving Staffordshire and surrounding areas.</address>
+        <small>&copy; <span data-year></span> <span data-brand-name>Elysium By Georgie Rose</span>. All rights reserved.</small>
       </div>
       <div class="footer-links">
         <strong>Quick links</strong>
-        <a href="services.html">Services</a>
-        <a href="weddings.html">Weddings</a>
-        <a href="popups.html">Pop-ups</a>
+        <a href="index.html">Home</a>
+        <a href="nails.html">Nails</a>
+        <a href="jewellery.html">Permanent Jewellery</a>
         <a href="gallery.html">Gallery</a>
-        <a href="contact.html">Contact</a>
+        <a href="contact.html">Contact / Book</a>
       </div>
       <div class="footer-links">
-        <strong>Policies</strong>
-        <a href="policies/privacy.html">Privacy</a>
-        <a href="policies/cookies.html">Cookies</a>
-        <a href="policies/accessibility.html">Accessibility</a>
+        <strong>Service links</strong>
+        <a href="nails.html#biab">BIAB</a>
+        <a href="nails.html#gel-polish">Gel Polish</a>
+        <a href="nails.html#gel-extensions">Gel Extensions</a>
+        <a href="jewellery.html#bracelets">Bracelets</a>
+        <a href="jewellery.html#events">Pop-ups and events</a>
+      </div>
+      <div class="footer-links">
         <strong>Social</strong>
-        <a href="https://www.instagram.com/elysium_by_georgierose/" target="_blank" rel="noreferrer">Instagram</a>
-        <a href="https://www.facebook.com/profile.php?id=61571925904476" target="_blank" rel="noreferrer">Facebook</a>
+        <a data-social-link="instagram" href="#">Instagram</a>
+        <a data-social-link="facebook" href="#">Facebook</a>
+        <a class="hidden" data-social-link="tiktok" href="#">TikTok</a>
+        <span data-contact-email-wrap>Email: <a data-contact-email-link href="mailto:hello@elysiumbygeorgierose.co.uk">hello@elysiumbygeorgierose.co.uk</a></span>
+        <span data-contact-phone-wrap>Phone: <a data-contact-phone-link href="#"></a></span>
       </div>
     </div>
   </footer>
 
-  <div class="cookie-banner" role="dialog" aria-live="polite" aria-label="Cookie notice">
-    <span>We only use cookies for embedded social content. You can continue browsing if you are happy with this.</span>
-    <button type="button">Got it</button>
-  </div>
-
-  <script src="assets/site.js"></script>
+  <script src="assets/site-config.js"></script>
+  <script src="assets/main.js" defer></script>
 </body>
 </html>
