--- a/services.html
+++ b/services.html
@@ -1,178 +1,84 @@
 ﻿<!doctype html>
-<html lang="en">
+<html lang="en-GB">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Services | Elysium by Georgie Rose</title>
-  <meta name="description" content="Explore permanent jewellery services including bracelets, anklets, necklaces, rings, and waist chains. Materials in sterling silver and gold, with aftercare guidance included.">
-  <meta property="og:title" content="Services | Elysium by Georgie Rose">
-  <meta property="og:description" content="Permanent jewellery services, materials, and aftercare guidance.">
-  <meta property="og:image" content="assets/images/final-logo.jpg">
+  <title>Services Overview | Elysium By Georgie Rose</title>
+  <meta name="description" content="Overview of nails and permanent jewellery services at Elysium By Georgie Rose.">
+  <meta property="og:title" content="Services Overview | Elysium By Georgie Rose">
+  <meta property="og:description" content="Explore BIAB, gel services, and permanent jewellery options.">
   <meta property="og:type" content="website">
+  <meta property="og:image" content="assets/images/Jewellery/Blue%20%26%20gold%20Bracelet.jpg">
+  <link rel="icon" href="assets/images/final-logo.jpg">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,400;9..144,600;9..144,700&family=Manrope:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/style.css">
-  <!-- Update image paths below if your filenames differ. -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "LocalBusiness",
-    "name": "Elysium by Georgie Rose",
-    "alternateName": "Elysium Permanent Jewellery",
-    "image": "assets/images/final-logo.jpg",
-    "description": "Permanent welded jewellery and pop-up experiences in Staffordshire.",
-    "address": {
-      "@type": "PostalAddress",
-      "streetAddress": "65 George Street",
-      "addressLocality": "Newcastle-under-Lyme",
-      "addressRegion": "Staffordshire",
-      "addressCountry": "GB"
-    },
-    "location": [
-      {
-        "@type": "Place",
-        "name": "Panache",
-        "address": {
-          "@type": "PostalAddress",
-          "streetAddress": "15 Young St",
-          "addressLocality": "Cheadle",
-          "addressRegion": "Stoke-on-Trent",
-          "postalCode": "ST10 1HL",
-          "addressCountry": "GB"
-        }
-      }
-    ],
-    "sameAs": [
-      "https://www.instagram.com/elysium_by_georgierose/",
-      "https://www.facebook.com/profile.php?id=61571925904476"
-    ]
-  }
-  </script>
 </head>
 <body>
-  <a class="skip-link" href="#main">Skip to content</a>
+  <a class="skip-link" href="#main-content">Skip to content</a>
 
   <header class="site-header">
     <div class="container header-inner">
-      <a class="logo" href="index.html">
-        <img src="assets/images/final-logo.jpg" alt="Elysium by Georgie Rose logo">
-        <div>
-          <div>Elysium by Georgie Rose</div>
-          <small class="text-muted">Permanent jewellery</small>
-        </div>
+      <a class="brand" href="index.html">
+        <img class="brand-mark" src="assets/images/final-logo.jpg" alt="Elysium By Georgie Rose logo" width="50" height="50">
+        <span class="brand-text">
+          <span class="brand-name" data-brand-name>Elysium By Georgie Rose</span>
+          <span class="brand-tagline">Nails and Permanent Jewellery</span>
+        </span>
       </a>
-      <div class="nav-actions">
-        <nav class="site-nav" aria-label="Main">
-          <button id="navToggle" class="nav-toggle" aria-expanded="false" aria-controls="navMenu">Menu</button>
-          <div id="navMenu" class="nav-links">
-            <a href="index.html">Home</a>
-            <a href="services.html">Services</a>
-            <a href="weddings.html">Weddings</a>
-            <a href="popups.html">Pop-ups</a>
-            <a href="gallery.html">Gallery</a>
-            <a href="faq.html">FAQs</a>
-            <a href="contact.html">Contact</a>
-          </div>
-        </nav>
-        <a class="btn btn-primary" href="contact.html">Book / Enquire</a>
+      <nav class="nav-shell" aria-label="Primary">
+        <button class="nav-toggle" type="button" data-nav-toggle aria-expanded="false" aria-controls="site-menu">Menu</button>
+        <div class="nav-backdrop" data-nav-backdrop></div>
+        <div id="site-menu" class="site-nav-links" data-nav-menu>
+          <a href="index.html">Home</a>
+          <a href="nails.html">Nails</a>
+          <a href="jewellery.html">Permanent Jewellery</a>
+          <a href="gallery.html">Gallery</a>
+          <a href="contact.html">Contact / Book</a>
+        </div>
+      </nav>
+      <div class="header-meta">
+        <div class="social-inline">
+          <a class="social-link" data-social-link="instagram" href="#" aria-label="Instagram"><svg viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M7.8 2h8.4A5.8 5.8 0 0 1 22 7.8v8.4a5.8 5.8 0 0 1-5.8 5.8H7.8A5.8 5.8 0 0 1 2 16.2V7.8A5.8 5.8 0 0 1 7.8 2Zm-.2 2A3.6 3.6 0 0 0 4 7.6v8.8A3.6 3.6 0 0 0 7.6 20h8.8a3.6 3.6 0 0 0 3.6-3.6V7.6A3.6 3.6 0 0 0 16.4 4H7.6Zm9.65 1.5a1.15 1.15 0 1 1 0 2.3 1.15 1.15 0 0 1 0-2.3ZM12 7a5 5 0 1 1 0 10 5 5 0 0 1 0-10Zm0 2a3 3 0 1 0 0 6 3 3 0 0 0 0-6Z"/></svg></a>
+          <a class="social-link" data-social-link="facebook" href="#" aria-label="Facebook"><svg viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M13.5 22v-8h2.7l.4-3h-3.1V9.1c0-.9.3-1.6 1.6-1.6h1.7V4.8c-.8-.1-1.6-.2-2.4-.2-2.4 0-4.1 1.5-4.1 4.3V11H8v3h2.3v8h3.2Z"/></svg></a>
+        </div>
+        <a class="btn btn-primary" data-book-link href="contact.html">Book / Enquire</a>
       </div>
     </div>
   </header>
 
-  <main id="main">
+  <main id="main-content">
     <section class="hero">
-      <div class="container hero-grid">
-        <div>
-          <p class="pill">Services</p>
-          <h1>Permanent jewellery designed for everyday wear.</h1>
-          <p class="lead">We custom-fit and weld each piece so it sits perfectly, feels effortless, and stays with you. Choose from bracelets, anklets, necklaces, rings, and waist chains.</p>
-          <div class="hero-actions">
-            <a class="btn btn-primary" href="contact.html">Enquire about a piece</a>
-            <a class="btn btn-secondary" href="weddings.html">Wedding packages</a>
-          </div>
-        </div>
-        <div class="hero-image">
-          <img src="assets/images/banner-for-pop-ups.png" alt="Permanent jewellery fittings">
-        </div>
-      </div>
-    </section>
-
-    <section class="section surface">
-      <div class="container">
-        <h2 class="section-title">Permanent jewellery services</h2>
-        <div class="grid grid-3">
-          <div class="card" id="bracelets">
-            <h3>Bracelets</h3>
-            <p>Classic or delicate chains, welded for a seamless everyday finish.</p>
-          </div>
-          <div class="card" id="anklets">
-            <h3>Anklets</h3>
-            <p>Custom-length ankle chains with optional charms and connectors.</p>
-          </div>
-          <div class="card" id="necklaces">
-            <h3>Necklaces</h3>
-            <p>Collars, layers, or pendants fitted to your exact neckline.</p>
-          </div>
-          <div class="card" id="rings">
-            <h3>Rings</h3>
-            <p>Minimal welded rings for a sleek, permanent finish.</p>
-          </div>
-          <div class="card" id="waist-chains">
-            <h3>Waist chains</h3>
-            <p>Styled lengths perfect for events, holidays, and layered looks.</p>
-          </div>
-          <!-- Optional service card: remove if not offered -->
-          <div class="card" id="nails">
-            <h3>Gel nails / builder gel</h3>
-            <p>Available at Panache, 15 Young St, Cheadle, ST10 1HL. Ask us for availability.</p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="section">
-      <div class="container grid grid-2">
-        <div class="card">
-          <h2>Charms and add-ons</h2>
-          <p class="text-muted">Personalise your chain with initials, symbols, or connectors. We will show you the latest selection during your fitting.</p>
-        </div>
-        <div class="card">
-          <h2>Materials</h2>
-          <p class="text-muted">Choose from sterling silver, gold filled, or solid gold chains. We will guide you on the best option for your lifestyle and budget.</p>
-        </div>
+      <div class="container hero-copy">
+        <span class="eyebrow">Service overview</span>
+        <h1 class="hero-title">Nails and permanent jewellery services</h1>
+        <p class="lead">This page provides a quick overview. For full details and galleries, use the dedicated service pages below.</p>
       </div>
     </section>
 
     <section class="section surface">
       <div class="container grid grid-2">
-        <div class="card">
-          <h2>Pricing guide</h2>
-          <p class="text-muted">Prices vary by chain and add-ons. Your final price is confirmed before welding.</p>
+        <article class="path-card">
+          <img src="assets/images/Nails/Blue%20Extensions.jpg" alt="Blue nail extensions" loading="lazy" decoding="async" width="900" height="700">
+          <h2>Nails</h2>
           <ul>
-            <li>Bracelets from GBP --</li>
-            <li>Anklets from GBP --</li>
-            <li>Necklaces from GBP --</li>
-            <li>Rings from GBP --</li>
-            <li>Waist chains from GBP --</li>
-            <li>Charms from GBP --</li>
+            <li>BIAB overlays and structured gel finishes</li>
+            <li>Gel polish appointments for polished everyday wear</li>
+            <li>Gel extensions tailored to shape, length and style</li>
           </ul>
-        </div>
-        <div class="card">
-          <h2>Aftercare and safety</h2>
-          <p class="text-muted">We provide guidance on cleaning, daily wear, and how to remove your jewellery if needed. If you have medical imaging or surgery planned, we can safely remove and re-weld your piece.</p>
-        </div>
-      </div>
-    </section>
-
-    <section class="section">
-      <div class="container">
-        <div class="card">
-          <h2>Ready to choose your chain?</h2>
-          <p class="text-muted">Book an appointment or ask about pop-ups, group bookings, or weddings.</p>
-          <div class="hero-actions">
-            <a class="btn btn-primary" href="contact.html">Enquire now</a>
-            <a class="btn btn-secondary" href="popups.html">Pop-up bookings</a>
-            <a class="btn btn-secondary" href="weddings.html">Wedding packages</a>
-          </div>
-        </div>
+          <a class="btn btn-secondary" href="nails.html">Open nails page</a>
+        </article>
+        <article class="path-card">
+          <img src="assets/images/Jewellery/Gold%20permanent%20bracelet.jpg" alt="Gold permanent bracelet" loading="lazy" decoding="async" width="900" height="700">
+          <h2>Permanent Jewellery</h2>
+          <ul>
+            <li>Custom-fitted welded bracelets, anklets and necklaces</li>
+            <li>Private appointments, events and pop-up bookings</li>
+            <li>Wedding keepsake and milestone moments</li>
+          </ul>
+          <a class="btn btn-secondary" href="jewellery.html">Open jewellery page</a>
+        </article>
       </div>
     </section>
   </main>
@@ -180,35 +86,39 @@
   <footer class="footer">
     <div class="container footer-grid">
       <div>
-        <h3>Elysium by Georgie Rose</h3>
-        <p class="text-muted">Permanent jewellery experiences in Staffordshire and beyond. Custom-fitted, welded, and designed to last.</p>
-        <small>(c) <span data-year></span> Elysium by Georgie Rose.</small>
+        <h2 class="footer-title" data-brand-name>Elysium By Georgie Rose</h2>
+        <p>Premium nails and permanent jewellery services with an editorial, detail-led finish.</p>
+        <address data-location-text>Serving Staffordshire and surrounding areas.</address>
+        <small>&copy; <span data-year></span> <span data-brand-name>Elysium By Georgie Rose</span>. All rights reserved.</small>
       </div>
       <div class="footer-links">
         <strong>Quick links</strong>
-        <a href="services.html">Services</a>
-        <a href="weddings.html">Weddings</a>
-        <a href="popups.html">Pop-ups</a>
+        <a href="index.html">Home</a>
+        <a href="nails.html">Nails</a>
+        <a href="jewellery.html">Permanent Jewellery</a>
         <a href="gallery.html">Gallery</a>
-        <a href="contact.html">Contact</a>
+        <a href="contact.html">Contact / Book</a>
       </div>
       <div class="footer-links">
-        <strong>Policies</strong>
-        <a href="policies/privacy.html">Privacy</a>
-        <a href="policies/cookies.html">Cookies</a>
-        <a href="policies/accessibility.html">Accessibility</a>
+        <strong>Service links</strong>
+        <a href="nails.html#biab">BIAB</a>
+        <a href="nails.html#gel-polish">Gel Polish</a>
+        <a href="nails.html#gel-extensions">Gel Extensions</a>
+        <a href="jewellery.html#bracelets">Bracelets</a>
+        <a href="jewellery.html#events">Pop-ups and events</a>
+      </div>
+      <div class="footer-links">
         <strong>Social</strong>
-        <a href="https://www.instagram.com/elysium_by_georgierose/" target="_blank" rel="noreferrer">Instagram</a>
-        <a href="https://www.facebook.com/profile.php?id=61571925904476" target="_blank" rel="noreferrer">Facebook</a>
+        <a data-social-link="instagram" href="#">Instagram</a>
+        <a data-social-link="facebook" href="#">Facebook</a>
+        <a class="hidden" data-social-link="tiktok" href="#">TikTok</a>
+        <span data-contact-email-wrap>Email: <a data-contact-email-link href="mailto:hello@elysiumbygeorgierose.co.uk">hello@elysiumbygeorgierose.co.uk</a></span>
+        <span data-contact-phone-wrap>Phone: <a data-contact-phone-link href="#"></a></span>
       </div>
     </div>
   </footer>
 
-  <div class="cookie-banner" role="dialog" aria-live="polite" aria-label="Cookie notice">
-    <span>We only use cookies for embedded social content. You can continue browsing if you are happy with this.</span>
-    <button type="button">Got it</button>
-  </div>
-
-  <script src="assets/site.js"></script>
+  <script src="assets/site-config.js"></script>
+  <script src="assets/main.js" defer></script>
 </body>
 </html>
