--- a/policies/cookies.html
+++ b/policies/cookies.html
@@ -1,79 +1,82 @@
 ﻿<!doctype html>
-<html lang="en">
+<html lang="en-GB">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Cookie Policy | Elysium by Georgie Rose</title>
-  <meta name="description" content="Cookie policy for Elysium by Georgie Rose permanent jewellery.">
-  <meta property="og:title" content="Cookie Policy | Elysium by Georgie Rose">
-  <meta property="og:description" content="How cookies are used on this site.">
-  <meta property="og:image" content="../assets/images/final-logo.jpg">
+  <title>Cookie Policy | Elysium By Georgie Rose</title>
+  <meta name="description" content="Cookie policy for Elysium By Georgie Rose website visitors.">
+  <meta property="og:title" content="Cookie Policy | Elysium By Georgie Rose">
+  <meta property="og:description" content="Details of cookie usage for embeds and site functionality.">
   <meta property="og:type" content="website">
+  <meta property="og:image" content="../assets/images/final-logo.jpg">
+  <link rel="icon" href="../assets/images/final-logo.jpg">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,400;9..144,600;9..144,700&family=Manrope:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../assets/style.css">
-  <!-- Update image paths below if your filenames differ. -->
 </head>
 <body>
-  <a class="skip-link" href="#main">Skip to content</a>
+  <a class="skip-link" href="#main-content">Skip to content</a>
 
   <header class="site-header">
     <div class="container header-inner">
-      <a class="logo" href="../index.html">
-        <img src="../assets/images/final-logo.jpg" alt="Elysium by Georgie Rose logo">
-        <div>
-          <div>Elysium by Georgie Rose</div>
-          <small class="text-muted">Permanent jewellery</small>
-        </div>
+      <a class="brand" href="../index.html">
+        <img class="brand-mark" src="../assets/images/final-logo.jpg" alt="Elysium By Georgie Rose logo" width="50" height="50">
+        <span class="brand-text">
+          <span class="brand-name" data-brand-name>Elysium By Georgie Rose</span>
+          <span class="brand-tagline">Nails and Permanent Jewellery</span>
+        </span>
       </a>
-      <div class="nav-actions">
-        <nav class="site-nav" aria-label="Main">
-          <button id="navToggle" class="nav-toggle" aria-expanded="false" aria-controls="navMenu">Menu</button>
-          <div id="navMenu" class="nav-links">
-            <a href="../index.html">Home</a>
-            <a href="../services.html">Services</a>
-            <a href="../weddings.html">Weddings</a>
-            <a href="../popups.html">Pop-ups</a>
-            <a href="../gallery.html">Gallery</a>
-            <a href="../faq.html">FAQs</a>
-            <a href="../contact.html">Contact</a>
-          </div>
-        </nav>
-        <a class="btn btn-primary" href="../contact.html">Book / Enquire</a>
+      <nav class="nav-shell" aria-label="Primary">
+        <button class="nav-toggle" type="button" data-nav-toggle aria-expanded="false" aria-controls="site-menu">Menu</button>
+        <div class="nav-backdrop" data-nav-backdrop></div>
+        <div id="site-menu" class="site-nav-links" data-nav-menu>
+          <a href="../index.html">Home</a>
+          <a href="../nails.html">Nails</a>
+          <a href="../jewellery.html">Permanent Jewellery</a>
+          <a href="../gallery.html">Gallery</a>
+          <a href="../contact.html">Contact / Book</a>
+        </div>
+      </nav>
+      <div class="header-meta">
+        <a class="btn btn-primary" data-book-link href="../contact.html">Book / Enquire</a>
       </div>
     </div>
   </header>
 
-  <main id="main">
+  <main id="main-content">
     <section class="hero">
-      <div class="container">
-        <p class="pill">Policies</p>
-        <h1>Cookie policy</h1>
-        <p class="lead">Last updated: 6 February 2026</p>
+      <div class="container hero-copy">
+        <span class="eyebrow">Policy</span>
+        <h1 class="hero-title">Cookie policy</h1>
+        <p class="lead">Last updated: 8 February 2026</p>
       </div>
     </section>
 
     <section class="section surface">
       <div class="container grid grid-2">
-        <div class="card">
+        <article class="card">
           <h2>Essential cookies</h2>
-          <p class="text-muted">This site runs on GitHub Pages and does not set marketing cookies by default.</p>
-        </div>
-        <div class="card">
-          <h2>Embedded content</h2>
-          <p class="text-muted">If Instagram embeds are enabled, Instagram may set cookies to display content. You can choose whether to view embedded content.</p>
-        </div>
+          <p class="muted">Essential cookies may be used for basic website functionality such as navigation state and form flow.</p>
+        </article>
+        <article class="card">
+          <h2>Third-party embeds</h2>
+          <p class="muted">Social embeds (for example Instagram) may set their own cookies when loaded.</p>
+        </article>
       </div>
     </section>
 
     <section class="section">
       <div class="container grid grid-2">
-        <div class="card">
+        <article class="card">
           <h2>Managing cookies</h2>
-          <p class="text-muted">You can delete cookies using your browser settings at any time. This will not impact core site functionality.</p>
-        </div>
-        <div class="card">
-          <h2>Contact</h2>
-          <p class="text-muted">Questions about cookies? Email <a href="mailto:hello@elysiumbygeorgierose.co.uk">hello@elysiumbygeorgierose.co.uk</a>.</p>
-        </div>
+          <p class="muted">You can control cookie behaviour in your browser settings at any time.</p>
+        </article>
+        <article class="card">
+          <h2>Questions</h2>
+          <p class="muted">If you have questions about cookie usage, please contact us by email.</p>
+          <p><a href="mailto:hello@elysiumbygeorgierose.co.uk">hello@elysiumbygeorgierose.co.uk</a></p>
+        </article>
       </div>
     </section>
   </main>
@@ -81,35 +84,35 @@
   <footer class="footer">
     <div class="container footer-grid">
       <div>
-        <h3>Elysium by Georgie Rose</h3>
-        <p class="text-muted">Permanent jewellery experiences in Staffordshire and beyond. Custom-fitted, welded, and designed to last.</p>
-        <small>(c) <span data-year></span> Elysium by Georgie Rose.</small>
+        <h2 class="footer-title" data-brand-name>Elysium By Georgie Rose</h2>
+        <p>Premium nails and permanent jewellery services with an editorial, detail-led finish.</p>
+        <address data-location-text>Serving Staffordshire and surrounding areas.</address>
+        <small>&copy; <span data-year></span> <span data-brand-name>Elysium By Georgie Rose</span>. All rights reserved.</small>
       </div>
       <div class="footer-links">
         <strong>Quick links</strong>
-        <a href="../services.html">Services</a>
-        <a href="../weddings.html">Weddings</a>
-        <a href="../popups.html">Pop-ups</a>
+        <a href="../index.html">Home</a>
+        <a href="../nails.html">Nails</a>
+        <a href="../jewellery.html">Permanent Jewellery</a>
         <a href="../gallery.html">Gallery</a>
-        <a href="../contact.html">Contact</a>
+        <a href="../contact.html">Contact / Book</a>
       </div>
       <div class="footer-links">
         <strong>Policies</strong>
         <a href="privacy.html">Privacy</a>
         <a href="cookies.html">Cookies</a>
         <a href="accessibility.html">Accessibility</a>
+      </div>
+      <div class="footer-links">
         <strong>Social</strong>
-        <a href="https://www.instagram.com/elysium_by_georgierose/" target="_blank" rel="noreferrer">Instagram</a>
-        <a href="https://www.facebook.com/profile.php?id=61571925904476" target="_blank" rel="noreferrer">Facebook</a>
+        <a data-social-link="instagram" href="#">Instagram</a>
+        <a data-social-link="facebook" href="#">Facebook</a>
+        <span data-contact-email-wrap>Email: <a data-contact-email-link href="mailto:hello@elysiumbygeorgierose.co.uk">hello@elysiumbygeorgierose.co.uk</a></span>
       </div>
     </div>
   </footer>
 
-  <div class="cookie-banner" role="dialog" aria-live="polite" aria-label="Cookie notice">
-    <span>We only use cookies for embedded social content. You can continue browsing if you are happy with this.</span>
-    <button type="button">Got it</button>
-  </div>
-
-  <script src="../assets/site.js"></script>
+  <script src="../assets/site-config.js"></script>
+  <script src="../assets/main.js" defer></script>
 </body>
 </html>
