--- a/weddings.html
+++ b/weddings.html
@@ -1,223 +1,83 @@
 ﻿<!doctype html>
-<html lang="en">
+<html lang="en-GB">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Wedding Packages | Elysium by Georgie Rose</title>
-  <meta name="description" content="Wedding permanent jewellery packages for bridal parties and guests. Create a bespoke guest experience station with Elysium by Georgie Rose.">
-  <meta property="og:title" content="Wedding Packages | Elysium by Georgie Rose">
-  <meta property="og:description" content="Premium wedding permanent jewellery packages and guest experience stations.">
-  <meta property="og:image" content="assets/images/final-logo.jpg">
+  <title>Weddings and Keepsakes | Elysium By Georgie Rose</title>
+  <meta name="description" content="Wedding keepsake jewellery experiences by Elysium By Georgie Rose.">
+  <meta property="og:title" content="Weddings and Keepsakes | Elysium By Georgie Rose">
+  <meta property="og:description" content="Premium welded jewellery keepsake moments for bridal parties and celebrations.">
   <meta property="og:type" content="website">
+  <meta property="og:image" content="assets/images/Jewellery/Wedding%20fair%20pop%20up%20with%20georgie%20in%20shot.jpg">
+  <link rel="icon" href="assets/images/final-logo.jpg">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,400;9..144,600;9..144,700&family=Manrope:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/style.css">
-  <!-- Update image paths below if your filenames differ. -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "LocalBusiness",
-    "name": "Elysium by Georgie Rose",
-    "alternateName": "Elysium Permanent Jewellery",
-    "image": "assets/images/final-logo.jpg",
-    "description": "Permanent welded jewellery and pop-up experiences in Staffordshire.",
-    "address": {
-      "@type": "PostalAddress",
-      "streetAddress": "65 George Street",
-      "addressLocality": "Newcastle-under-Lyme",
-      "addressRegion": "Staffordshire",
-      "addressCountry": "GB"
-    },
-    "location": [
-      {
-        "@type": "Place",
-        "name": "Panache",
-        "address": {
-          "@type": "PostalAddress",
-          "streetAddress": "15 Young St",
-          "addressLocality": "Cheadle",
-          "addressRegion": "Stoke-on-Trent",
-          "postalCode": "ST10 1HL",
-          "addressCountry": "GB"
-        }
-      }
-    ],
-    "sameAs": [
-      "https://www.instagram.com/elysium_by_georgierose/",
-      "https://www.facebook.com/profile.php?id=61571925904476"
-    ]
-  }
-  </script>
 </head>
 <body>
-  <a class="skip-link" href="#main">Skip to content</a>
+  <a class="skip-link" href="#main-content">Skip to content</a>
 
   <header class="site-header">
     <div class="container header-inner">
-      <a class="logo" href="index.html">
-        <img src="assets/images/final-logo.jpg" alt="Elysium by Georgie Rose logo">
-        <div>
-          <div>Elysium by Georgie Rose</div>
-          <small class="text-muted">Permanent jewellery</small>
-        </div>
+      <a class="brand" href="index.html">
+        <img class="brand-mark" src="assets/images/final-logo.jpg" alt="Elysium By Georgie Rose logo" width="50" height="50">
+        <span class="brand-text">
+          <span class="brand-name" data-brand-name>Elysium By Georgie Rose</span>
+          <span class="brand-tagline">Nails and Permanent Jewellery</span>
+        </span>
       </a>
-      <div class="nav-actions">
-        <nav class="site-nav" aria-label="Main">
-          <button id="navToggle" class="nav-toggle" aria-expanded="false" aria-controls="navMenu">Menu</button>
-          <div id="navMenu" class="nav-links">
-            <a href="index.html">Home</a>
-            <a href="services.html">Services</a>
-            <a href="weddings.html">Weddings</a>
-            <a href="popups.html">Pop-ups</a>
-            <a href="gallery.html">Gallery</a>
-            <a href="faq.html">FAQs</a>
-            <a href="contact.html">Contact</a>
-          </div>
-        </nav>
-        <a class="btn btn-primary" href="contact.html">Book / Enquire</a>
+      <nav class="nav-shell" aria-label="Primary">
+        <button class="nav-toggle" type="button" data-nav-toggle aria-expanded="false" aria-controls="site-menu">Menu</button>
+        <div class="nav-backdrop" data-nav-backdrop></div>
+        <div id="site-menu" class="site-nav-links" data-nav-menu>
+          <a href="index.html">Home</a>
+          <a href="nails.html">Nails</a>
+          <a href="jewellery.html">Permanent Jewellery</a>
+          <a href="gallery.html">Gallery</a>
+          <a href="contact.html">Contact / Book</a>
+        </div>
+      </nav>
+      <div class="header-meta">
+        <div class="social-inline">
+          <a class="social-link" data-social-link="instagram" href="#" aria-label="Instagram"><svg viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M7.8 2h8.4A5.8 5.8 0 0 1 22 7.8v8.4a5.8 5.8 0 0 1-5.8 5.8H7.8A5.8 5.8 0 0 1 2 16.2V7.8A5.8 5.8 0 0 1 7.8 2Zm-.2 2A3.6 3.6 0 0 0 4 7.6v8.8A3.6 3.6 0 0 0 7.6 20h8.8a3.6 3.6 0 0 0 3.6-3.6V7.6A3.6 3.6 0 0 0 16.4 4H7.6Zm9.65 1.5a1.15 1.15 0 1 1 0 2.3 1.15 1.15 0 0 1 0-2.3ZM12 7a5 5 0 1 1 0 10 5 5 0 0 1 0-10Zm0 2a3 3 0 1 0 0 6 3 3 0 0 0 0-6Z"/></svg></a>
+          <a class="social-link" data-social-link="facebook" href="#" aria-label="Facebook"><svg viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M13.5 22v-8h2.7l.4-3h-3.1V9.1c0-.9.3-1.6 1.6-1.6h1.7V4.8c-.8-.1-1.6-.2-2.4-.2-2.4 0-4.1 1.5-4.1 4.3V11H8v3h2.3v8h3.2Z"/></svg></a>
+        </div>
+        <a class="btn btn-primary" data-book-link href="contact.html">Book / Enquire</a>
       </div>
     </div>
   </header>
 
-  <main id="main">
+  <main id="main-content">
     <section class="hero">
-      <div class="container hero-grid">
-        <div>
-          <p class="pill">Wedding permanent jewellery</p>
-          <h1>Create a guest experience station your wedding party will remember.</h1>
-          <p class="lead">We bring a premium fitting and welding experience to your wedding or pre-wedding events. Perfect for bridal parties, VIP guests, or full-day celebrations.</p>
-          <div class="hero-actions">
-            <a class="btn btn-primary" href="contact.html">Enquire about weddings</a>
-            <a class="btn btn-secondary" href="services.html">View services</a>
+      <div class="container hero-shell">
+        <div class="hero-copy">
+          <span class="eyebrow">Weddings and keepsakes</span>
+          <h1 class="hero-title">Meaningful jewellery moments for wedding celebrations</h1>
+          <p class="lead">Create a premium keepsake experience for bridal parties, close family and guest moments.</p>
+          <div class="btn-group">
+            <a class="btn btn-primary" href="contact.html">Enquire for weddings</a>
+            <a class="btn btn-ghost" data-social-link="instagram" href="#">Message on Instagram</a>
           </div>
         </div>
-        <div class="hero-image">
-          <img src="assets/images/banner-for-pop-ups.png" alt="Wedding permanent jewellery setup">
-        </div>
+        <img class="about-photo" src="assets/images/Jewellery/Wedding%20fair%20pop%20up%20with%20georgie%20in%20shot.jpg" alt="Wedding fair pop-up by Georgie" loading="lazy" decoding="async" width="900" height="760">
       </div>
     </section>
 
     <section class="section surface">
-      <div class="container">
-        <h2 class="section-title">Guest experience station</h2>
-        <p class="section-subtitle">A calm, elegant station where guests choose a chain, are fitted, and leave with a welded piece.</p>
-        <div class="grid grid-3">
-          <div class="card">
-            <h3>Styled setup</h3>
-            <p>We bring a refined, branded station with curated chains and charms.</p>
-          </div>
-          <div class="card">
-            <h3>Guest flow</h3>
-            <p>We manage timing and fitting so your event stays seamless and stress-free.</p>
-          </div>
-          <div class="card">
-            <h3>Lasting keepsakes</h3>
-            <p>Each guest receives a meaningful welded piece to remember the day.</p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="section">
-      <div class="container">
-        <h2 class="section-title">Wedding packages</h2>
-        <div class="grid grid-3">
-          <div class="card">
-            <h3>Intimate Bond</h3>
-            <p class="text-muted">Ideal for: Couple and 2 guests</p>
-            <ul>
-              <li>4 fitted pieces</li>
-              <li>Choice of chain styles</li>
-              <li>Aftercare cards</li>
-            </ul>
-            <a class="btn btn-secondary" href="contact.html">Enquire about this package</a>
-          </div>
-          <div class="card">
-            <h3>Everlasting Memories</h3>
-            <p class="text-muted">Ideal for: Bridal party (6 to 8)</p>
-            <ul>
-              <li>6 to 8 fitted pieces</li>
-              <li>Charm upgrades</li>
-              <li>On-site fitting session</li>
-            </ul>
-            <a class="btn btn-secondary" href="contact.html">Enquire about this package</a>
-          </div>
-          <div class="card">
-            <h3>Luxe Guest Experience</h3>
-            <p class="text-muted">Ideal for: 10 to 15 guests</p>
-            <ul>
-              <li>10 to 15 fitted pieces</li>
-              <li>Premium chain options</li>
-              <li>Dedicated experience host</li>
-            </ul>
-            <a class="btn btn-secondary" href="contact.html">Enquire about this package</a>
-          </div>
-          <div class="card">
-            <h3>VIP Couple</h3>
-            <p class="text-muted">Ideal for: Bride and Groom</p>
-            <ul>
-              <li>Two premium fitted pieces</li>
-              <li>Private fitting experience</li>
-              <li>Complimentary charms</li>
-            </ul>
-            <a class="btn btn-secondary" href="contact.html">Enquire about this package</a>
-          </div>
-          <div class="card">
-            <h3>Custom Wedding Station</h3>
-            <p class="text-muted">Ideal for: Full guest list</p>
-            <ul>
-              <li>Tailored guest volume</li>
-              <li>Styling and branding options</li>
-              <li>On-site team support</li>
-            </ul>
-            <a class="btn btn-secondary" href="contact.html">Request a quote</a>
-          </div>
-          <div class="card">
-            <h3>Preview appointment</h3>
-            <p class="text-muted">Ideal for: Planning stage</p>
-            <ul>
-              <li>Chain and charm consultation</li>
-              <li>Timeline planning</li>
-              <li>Wedding look guidance</li>
-            </ul>
-            <a class="btn btn-secondary" href="contact.html">Book a consultation</a>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="section surface">
-      <div class="container">
-        <h2 class="section-title">Wedding FAQs</h2>
-        <div class="details-group" data-accordion>
-          <details>
-            <summary>How far in advance should we book?</summary>
-            <p>We recommend booking 3 to 6 months ahead for peak season dates.</p>
-          </details>
-          <details>
-            <summary>Can we customise the chain selection?</summary>
-            <p>Yes, we can curate a selection that matches your wedding style and budget.</p>
-          </details>
-          <details>
-            <summary>Do you travel to venues?</summary>
-            <p>Yes, we can travel to your venue or pre-wedding events. Travel fees may apply.</p>
-          </details>
-          <details>
-            <summary>Is there a minimum guest number?</summary>
-            <p>Packages are flexible. We can build an experience for couples or full guest lists.</p>
-          </details>
-        </div>
-      </div>
-    </section>
-
-    <section class="section">
-      <div class="container">
-        <div class="card">
-          <h2>Lets plan your wedding experience</h2>
-          <p class="text-muted">Tell us your date, venue, and guest count. We will recommend the best package for your celebration.</p>
-          <div class="hero-actions">
-            <a class="btn btn-primary" href="contact.html">Enquire now</a>
-            <a class="btn btn-secondary" href="mailto:hello@elysiumbygeorgierose.co.uk">Email us</a>
-          </div>
-        </div>
+      <div class="container grid grid-3">
+        <article class="card">
+          <h2>Bridal party fittings</h2>
+          <p class="muted">Plan a pre-wedding fitting for your closest people, with pieces selected to suit each style.</p>
+        </article>
+        <article class="card">
+          <h2>Guest keepsake station</h2>
+          <p class="muted">Add a dedicated jewellery moment to your event flow for meaningful keepsakes.</p>
+        </article>
+        <article class="card">
+          <h2>Tailored enquiry process</h2>
+          <p class="muted">Share your date range, guest size and setting to receive bespoke recommendations.</p>
+        </article>
       </div>
     </section>
   </main>
@@ -225,35 +85,39 @@
   <footer class="footer">
     <div class="container footer-grid">
       <div>
-        <h3>Elysium by Georgie Rose</h3>
-        <p class="text-muted">Permanent jewellery experiences in Staffordshire and beyond. Custom-fitted, welded, and designed to last.</p>
-        <small>(c) <span data-year></span> Elysium by Georgie Rose.</small>
+        <h2 class="footer-title" data-brand-name>Elysium By Georgie Rose</h2>
+        <p>Premium nails and permanent jewellery services with an editorial, detail-led finish.</p>
+        <address data-location-text>Serving Staffordshire and surrounding areas.</address>
+        <small>&copy; <span data-year></span> <span data-brand-name>Elysium By Georgie Rose</span>. All rights reserved.</small>
       </div>
       <div class="footer-links">
         <strong>Quick links</strong>
-        <a href="services.html">Services</a>
-        <a href="weddings.html">Weddings</a>
-        <a href="popups.html">Pop-ups</a>
+        <a href="index.html">Home</a>
+        <a href="nails.html">Nails</a>
+        <a href="jewellery.html">Permanent Jewellery</a>
         <a href="gallery.html">Gallery</a>
-        <a href="contact.html">Contact</a>
+        <a href="contact.html">Contact / Book</a>
       </div>
       <div class="footer-links">
-        <strong>Policies</strong>
-        <a href="policies/privacy.html">Privacy</a>
-        <a href="policies/cookies.html">Cookies</a>
-        <a href="policies/accessibility.html">Accessibility</a>
+        <strong>Service links</strong>
+        <a href="nails.html#biab">BIAB</a>
+        <a href="nails.html#gel-polish">Gel Polish</a>
+        <a href="nails.html#gel-extensions">Gel Extensions</a>
+        <a href="jewellery.html#bracelets">Bracelets</a>
+        <a href="jewellery.html#events">Pop-ups and events</a>
+      </div>
+      <div class="footer-links">
         <strong>Social</strong>
-        <a href="https://www.instagram.com/elysium_by_georgierose/" target="_blank" rel="noreferrer">Instagram</a>
-        <a href="https://www.facebook.com/profile.php?id=61571925904476" target="_blank" rel="noreferrer">Facebook</a>
+        <a data-social-link="instagram" href="#">Instagram</a>
+        <a data-social-link="facebook" href="#">Facebook</a>
+        <a class="hidden" data-social-link="tiktok" href="#">TikTok</a>
+        <span data-contact-email-wrap>Email: <a data-contact-email-link href="mailto:hello@elysiumbygeorgierose.co.uk">hello@elysiumbygeorgierose.co.uk</a></span>
+        <span data-contact-phone-wrap>Phone: <a data-contact-phone-link href="#"></a></span>
       </div>
     </div>
   </footer>
 
-  <div class="cookie-banner" role="dialog" aria-live="polite" aria-label="Cookie notice">
-    <span>We only use cookies for embedded social content. You can continue browsing if you are happy with this.</span>
-    <button type="button">Got it</button>
-  </div>
-
-  <script src="assets/site.js"></script>
+  <script src="assets/site-config.js"></script>
+  <script src="assets/main.js" defer></script>
 </body>
 </html>
